--- a/BamiBread/BamiBreadT3H/build.gradle
+++ b/BamiBread/BamiBreadT3H/build.gradle
@@ -4,9 +4,10 @@ buildscript {
     repositories {
         jcenter()
         mavenCentral()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0'
+        classpath 'com.android.tools.build:gradle:3.0.1'
         classpath 'com.google.gms:google-services:3.1.0'
         classpath "io.realm:realm-gradle-plugin:3.7.2"
         classpath 'com.jakewharton:butterknife-gradle-plugin:8.8.1'
@@ -24,6 +25,7 @@ allprojects {
         maven {
             url "https://maven.google.com" // Google's Maven repository
         }
+        google()
     }
 }
 
